--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
-    <title>test community</title>
+    <title>发布新问题--community</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -46,5 +46,36 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
+            <hr>
+            <form action="#">
+                <div class="form-group">
+                    <label for="title">问题标题（简单扼要）：</label>
+                    <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
+                </div>
+                <div class="form-group">
+                    <label for="title">问题补充（必填，请参照右侧提示）：</label>
+                    <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="title">添加标签：</label>
+                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以“，”分隔...">
+                </div>
+                <button type="button" class="btn btn-success btn-publish">提交</button>
+            </form>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>问题发起指南</h3>
+            <ul>
+                <li>问题标题：请用精简的语言描述您发布的问题，不超过25个字</li>
+                <li>问题补充：详细补充您的问题内容，并确保问题描述清晰直观，并提供一些相关的资料</li>
+                <li>选择标签：选择一个或多个适合的标签，用逗号隔开，每个标签不超过10个字</li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
