--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -30,6 +30,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li th:if="${session.user == null}">
                     <a href="https://github.com/login/oauth/authorize?client_id=6a312e03edabef8a3323&redirect_uri=http://localhost:8080/callback&scope=user&state=666">登录</a>
                 </li>
@@ -51,20 +54,21 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
-            <form action="#">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
+                    <input type="text" class="form-control" id="title" name="title" th:value="${title}" placeholder="问题标题...">
                 </div>
                 <div class="form-group">
-                    <label for="title">问题补充（必填，请参照右侧提示）：</label>
-                    <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                    <label for="description">问题补充（必填，请参照右侧提示）：</label>
+                    <textarea class="form-control" name="description" id="description" rows="3" th:text="${description}"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="title">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以“，”分隔...">
+                    <label for="tag">添加标签：</label>
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以“，”分隔...">
                 </div>
-                <button type="button" class="btn btn-success btn-publish">提交</button>
+                <span class="alert alert-danger" th:if="${error}" th:text="${error}"></span>
+                <button type="submit" class="btn btn-success btn-publish">提交</button>
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
