解决部分图片字体不显示的问题

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -18,7 +18,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">test community</span>
             </button>
-            <a class="navbar-brand" href="#">test community</a>
+            <a class="navbar-brand" href="/">test community</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
