--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,11 @@
 <head>
     <title>test community</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="js/npm.js"></script>
 </head>
 <body class="body">
 <nav class="navbar navbar-default">
@@ -18,7 +19,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">test community</span>
             </button>
-            <a class="navbar-brand" href="#">test community</a>
+            <a class="navbar-brand" href="/">test community</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,5 +50,27 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
+            <hr>
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object index-list-icon" src="https://avatars3.githubusercontent.com/u/35124871?v=4" alt="...">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">问题标题</h4>
+                    问题描述
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>热门问题</h3>
+        </div>
+    </div>
+</div>
 </body>
 </html>
