--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,15 +59,17 @@
                 <div class="media-left">
                     <a href="#">
 <!--                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}" alt="...">-->
-                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.Avatar_url}">
+                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
                     <span class="index-question-text" th:text="${question.description}"></span>
+                    <br>
                     <span class="index-question-text" th:text="${question.viewCount} +'查看'"></span>
                     <span class="index-question-text" th:text="${question.commentCount} +'评论'"></span>
                     <span class="index-question-text" th:text="${question.likeCount} +'点赞'"></span>
+                    <span class="index-question-text" th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
                 </div>
             </div>
         </div>
