--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,19 +74,26 @@
             </div>
             <nav aria-label="Page navigation" class="page_navi">
                 <ul class="pagination">
-                    <li>
-                        <a href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
+                    <li th:if="${pagination.showFirstPage}">
+                        <a th:href="@{/(page=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt&lt;</span>
                         </a>
                     </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li>
-                        <a href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
+                    <li th:if="${pagination.showPrevious}">
+                        <a th:href="@{/(page=${pagination.currentPage}-1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">
+                        <a th:href="@{/(page=${page})}" th:text="${page}"></a></li>
+                    <li th:if="${pagination.showNext}">
+                        <a th:href="@{/(page=${pagination.currentPage}+1)}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showLastPage}">
+                        <a th:href="@{/(page=${pagination.totalPage})}" aria-label="Next">
+                            <span aria-hidden="true">&gt&gt;</span>
                         </a>
                     </li>
                 </ul>
