--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,14 +25,17 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
-                    <span class="index-question-desc" th:text="${question.description}"></span>
-                    <br>
-                    <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>
-                    <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>
-                    <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>
-                    <span class="index-question-text"
-                          th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+                    <a th:href="@{/question/{id}(id = ${question.id})}">
+                        <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                        <span class="index-question-desc" th:text="${question.description}"></span>
+                    </a>
+                        <br>
+                        <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>
+                        <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>
+                        <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>
+                        <span class="index-question-text"
+                              th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}">
+                        </span>
                 </div>
             </div>
             <nav aria-label="Page navigation" class="page_navi">
