--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -18,49 +18,52 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-<!--            <div class="media" th:each="question: ${pagination.questions}">-->
-<!--                <div class="media-left">-->
-<!--                    <a href="#">-->
-<!--                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}">-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--                <div class="media-body">-->
-<!--                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>-->
-<!--                    <span class="index-question-desc" th:text="${question.description}"></span>-->
-<!--                    <br>-->
-<!--                    <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>-->
-<!--                    <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>-->
-<!--                    <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>-->
-<!--                    <span class="index-question-text"-->
-<!--                          th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <nav aria-label="Page navigation" class="page_navi">-->
-<!--                <ul class="pagination">-->
-<!--                    <li th:if="${pagination.showFirstPage}">-->
-<!--                        <a th:href="@{/(page=1)}" aria-label="Previous">-->
-<!--                            <span aria-hidden="true">&lt&lt;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li th:if="${pagination.showPrevious}">-->
-<!--                        <a th:href="@{/(page=${pagination.currentPage}-1)}" aria-label="Previous">-->
-<!--                            <span aria-hidden="true">&lt;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">-->
-<!--                        <a th:href="@{/(page=${page})}" th:text="${page}"></a></li>-->
-<!--                    <li th:if="${pagination.showNext}">-->
-<!--                        <a th:href="@{/(page=${pagination.currentPage}+1)}" aria-label="Next">-->
-<!--                            <span aria-hidden="true">&gt;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                    <li th:if="${pagination.showLastPage}">-->
-<!--                        <a th:href="@{/(page=${pagination.totalPage})}" aria-label="Next">-->
-<!--                            <span aria-hidden="true">&gt&gt;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </nav>-->
+            <div th:if="${totalCount == 0}">未发布问题</div>
+            <div class="media" th:if="${totalCount != 0}" th:each="question: ${pagination.questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <a th:href="@{/question/{id}(id = ${question.id})}">
+                        <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                        <span class="index-question-desc" th:text="${question.description}"></span>
+                    </a>
+                    <br>
+                    <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>
+                    <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>
+                    <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>
+                    <span class="index-question-text"
+                          th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+                </div>
+            </div>
+            <nav aria-label="Page navigation" class="page_navi">
+                <ul class="pagination">
+                    <li th:if="${pagination.showFirstPage}">
+                        <a th:href="@{'/profile/'+${section}+'/'(page=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showPrevious}">
+                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}-1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">
+                        <a th:href="@{'/profile/'+${section}+'/'(page=${page})}" th:text="${page}"></a></li>
+                    <li th:if="${pagination.showNext}">
+                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}+1)}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pagination.showLastPage}">
+                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.totalPage})}" aria-label="Next">
+                            <span aria-hidden="true">&gt&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
