--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -26,6 +26,9 @@
             <hr>
             <text th:text="${question.description}"></text>
             <hr>
+            <a th:href="@{'/publish/' + ${question.id}}" th:if="${session.user !=null && session.user == question.creator}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+            </a>
             <hr>
             <h4>
                 <!--                TODO 加入回复数-->
