--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -35,8 +35,7 @@
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的提问</a></li>
-                            <!--                        <li><a href="#">个人资料</a></li>-->
-                            <li><a href="#">退出登录</a></li>
+                            <li><a href="/logOut">退出登录</a></li>
                         </ul>
                     </li>
                 </ul>
