--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -26,10 +26,30 @@
             <hr>
             <text th:text="${question.description}"></text>
             <hr>
-            <a th:href="@{'/publish/' + ${question.id}}" th:if="${session.user !=null && session.user.id == question.creator}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
-            </a>
-            <hr>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${session.user !=null && session.user.id == question.creator}">
+                <a th:href="@{'/publish/' + ${question.id}}">
+                    <span class="glyphicon glyphicon-pencil button-right" aria-hidden="true">编辑</span>
+                </a>
+                <br>
+            </div>
+
+            <div th:if="${session.user !=null}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object index-list-icon img-rounded" th:src="${session.user.getAvatarUrl()}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <a th:href="@{/profile}">
+                        <h4 class="index-question-desc" th:text="${question.user.getName()}"></h4>
+                    </a>
+                </div>
+                <br>
+            </div>
+
+            <textarea th:if="${session.user !=null}" class="form-control" rows="3"></textarea>
+            <br>
             <h4>
                 <!--                TODO 加入回复数-->
                 个回复
@@ -44,7 +64,6 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <!--                    TODO  跳转到对应user-->
                     <a th:href="@{/profile}">
                         <h4 class="index-question-desc" th:text="${question.user.getName()}"></h4>
                     </a>
