引入jquery，实现不刷新页面回复

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -28,7 +28,7 @@
     font-weight: normal;
 }
 
-.page_navi{
+.page-navi{
     float: right;
 }
 
@@ -41,4 +41,5 @@
 
 .button-right{
     float: right;
+    margin-bottom: 6px;
 }
