--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                         </span>
                 </div>
             </div>
-            <nav aria-label="Page navigation" class="page_navi">
+            <nav aria-label="Page navigation" class="page-navi">
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
                         <a th:href="@{/(page=1)}" aria-label="Previous">
