--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <html>
 <head>
     <title>test community</title>
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
     <script src="/js/npm.js"></script>
 </head>
 <body class="body">
@@ -34,7 +36,7 @@
                 <br>
             </div>
 
-            <div th:if="${session.user !=null}">
+            <div id="comment_section" th:if="${session.user !=null}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object index-list-icon img-rounded" th:src="${session.user.getAvatarUrl()}">
@@ -46,10 +48,14 @@
                     </a>
                 </div>
                 <br>
+                <input type="hidden" id="question_id" th:value="${question.id}" readonly="readonly">
+                <textarea id="comment_content" class="form-control" rows="3"></textarea>
+                <br>
+                <button type="button" class="btn btn-success button-right" onclick="postComment()">提交回复</button>
+                <br>
             </div>
 
-            <textarea th:if="${session.user !=null}" class="form-control" rows="3"></textarea>
-            <br>
+            <hr>
             <h4>
                 <!--                TODO 加入回复数-->
                 个回复
