实现回复列表后端代码

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -43,3 +43,11 @@
     float: right;
     margin-bottom: 6px;
 }
+
+.container-div{
+    padding-bottom: 10px;
+}
+
+.icon-color{
+    color: #797979;
+}
