--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -17,7 +17,7 @@
 <div th:insert="navigation :: navbar"></div>
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 container-div">
             <h2 th:text="${question.title}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span></h2>
             <span>
                 作者: <span class="index-question-text" th:text="${question.user.getName()}"></span> |
@@ -29,13 +29,43 @@
             <text th:text="${question.description}"></text>
             <hr>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${session.user !=null && session.user.id == question.creator}">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 th:if="${session.user !=null && session.user.id == question.creator}">
                 <a th:href="@{'/publish/' + ${question.id}}">
                     <span class="glyphicon glyphicon-pencil button-right" aria-hidden="true">编辑</span>
                 </a>
                 <br>
             </div>
 
+            <!--            回复展示列表-->
+            <hr>
+            <h4>
+                <span th:text="${question.commentCount}"></span>个回复
+            </h4>
+            <br>
+            <div class="media" th:each="comment: ${comments}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object index-list-icon img-rounded" th:src="${comment.user.getAvatarUrl()}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <a th:href="@{/profile}">
+                        <h4 class="index-question-desc" th:text="${comment.user.getName()}"></h4>
+                    </a>
+                    <span class="index-question-desc" th:text="${comment.content}"></span>
+                    <div>
+                        <button class="btn btn-xs glyphicon glyphicon-thumbs-up icon-color" type="button"> 5</button>
+                        <button class="btn btn-xs glyphicon glyphicon-comment icon-color" type="button"> 5</button>
+                        <span class="index-question-text pull-right"
+                              th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <!--            回复输入框-->
+            <hr>
             <div id="comment_section" th:if="${session.user !=null}">
                 <div class="media-left">
                     <a href="#">
@@ -51,15 +81,11 @@
                 <input type="hidden" id="question_id" th:value="${question.id}" readonly="readonly">
                 <textarea id="comment_content" class="form-control" rows="3"></textarea>
                 <br>
-                <button type="button" class="btn btn-success button-right" onclick="postComment()">提交回复</button>
+                <button type="button" class="btn btn-success pull-right" onclick="postComment()">提交回复</button>
                 <br>
             </div>
 
-            <hr>
-            <h4>
-                <!--                TODO 加入回复数-->
-                个回复
-            </h4>
+
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
