--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -43,29 +43,61 @@
                 <span th:text="${question.commentCount}"></span>个回复
             </h4>
             <br>
-            <div class="media" th:each="comment: ${comments}">
-                <div class="media-left">
+            <div class="media comment-list-each" th:each="comment: ${comments}">
+                <div class="media-left ">
                     <a href="#">
                         <img class="media-object index-list-icon img-rounded" th:src="${comment.user.getAvatarUrl()}">
                     </a>
                 </div>
-                <div class="media-body">
+                <div class="media-body" th:id="${'comment-body-'}+comment.id">
                     <a th:href="@{/profile}">
                         <h4 class="index-question-desc" th:text="${comment.user.getName()}"></h4>
                     </a>
                     <span class="index-question-desc" th:text="${comment.content}"></span>
                     <div>
-                        <button class="btn btn-xs glyphicon glyphicon-thumbs-up icon-color" type="button"> 5</button>
-                        <button class="btn btn-xs glyphicon glyphicon-comment icon-color" type="button"> 5</button>
+                        <button class="btn btn-xs glyphicon glyphicon-thumbs-up icon-color" type="button"
+                                th:value="' '+ ${comment.likeCount}"></button>
+                        <button class="btn btn-xs glyphicon glyphicon-comment icon-color" type="button"
+                                th:data-id="${comment.id}" onclick="collapseComments(this)"> 5
+                        </button>
                         <span class="index-question-text pull-right"
                               th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">
                         </span>
+                    </div>
+                    <!--                    二级评论-->
+                    <div class="sub-comment collapse" th:id="${'comment-'+comment.id}">
+                        <div class="media comment-list-each" th:each="comment:${comments}">
+                            <div class="media-left ">
+                                <a href="#">
+                                    <img class="media-object index-list-icon img-rounded"
+                                         th:src="${comment.user.getAvatarUrl()}">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <a th:href="@{/profile}">
+                                    <h4 class="index-question-desc" th:text="${comment.user.getName()}"></h4>
+                                </a>
+                                <span class="index-question-desc" th:text="${comment.content}"></span>
+                                <div>
+                                    <span class="index-question-text pull-right"
+                                          th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}">
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="input-group comment">
+                            <input type="text" class="form-control" placeholder="输入回复" th:id="${'input-'+comment.id}">
+                            <span class="input-group-btn">
+                                <button class="btn btn-success" type="button" onclick="postSubComment(this)"
+                                        th:data-id="${comment.id}">走你</button>
+                            </span>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
             <!--            回复输入框-->
-            <hr>
             <div id="comment_section" th:if="${session.user !=null}">
                 <div class="media-left">
                     <a href="#">
