--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -18,61 +18,108 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-            <div th:if="${totalCount == 0}">未发布问题</div>
-            <div class="media" th:if="${totalCount != 0}" th:each="question: ${pagination.questions}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}">
-                    </a>
+<!--            问题列表-->
+            <div th:if="${section == 'questions'}">
+                <div th:if="${totalCount == 0}">未发布问题</div>
+                <div class="media" th:if="${totalCount != 0}" th:each="question: ${pagination.targetDTO}">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object index-list-icon img-rounded" th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <a th:href="@{/question/{id}(id = ${question.id})}">
+                            <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                        </a>
+                        <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>
+                        <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>
+                        <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>
+                        <span class="index-question-text"
+                              th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+                    </div>
                 </div>
-                <div class="media-body">
-                    <a th:href="@{/question/{id}(id = ${question.id})}">
-                        <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
-                    </a>
-                    <span class="index-question-text" th:text="${question.viewCount} +'查看 ●'"></span>
-                    <span class="index-question-text" th:text="${question.commentCount} +'评论 ●'"></span>
-                    <span class="index-question-text" th:text="${question.likeCount} +'点赞 ●'"></span>
-                    <span class="index-question-text"
-                          th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
-                </div>
+                <!--            分页栏-->
+                <nav aria-label="Page navigation" class="page-navi">
+                    <ul class="pagination">
+                        <li th:if="${pagination.showFirstPage}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=1)}" aria-label="Previous">
+                                <span aria-hidden="true">&lt&lt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${pagination.showPrevious}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}-1)}" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                            </a>
+                        </li>
+                        <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${page})}" th:text="${page}"></a></li>
+                        <li th:if="${pagination.showNext}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}+1)}" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${pagination.showLastPage}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.totalPage})}" aria-label="Next">
+                                <span aria-hidden="true">&gt&gt;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav aria-label="Page navigation" class="page-navi">
-                <ul class="pagination">
-                    <li th:if="${pagination.showFirstPage}">
-                        <a th:href="@{'/profile/'+${section}+'/'(page=1)}" aria-label="Previous">
-                            <span aria-hidden="true">&lt&lt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}-1)}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                        </a>
-                    </li>
-                    <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">
-                        <a th:href="@{'/profile/'+${section}+'/'(page=${page})}" th:text="${page}"></a></li>
-                    <li th:if="${pagination.showNext}">
-                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}+1)}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showLastPage}">
-                        <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.totalPage})}" aria-label="Next">
-                            <span aria-hidden="true">&gt&gt;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+<!--            通知列表-->
+            <div th:if="${section == 'replies'}">
+                <div th:if="${totalCount == 0}">无任何通知</div>
+                <div class="media" th:if="${totalCount != 0}" th:each="notification: ${pagination.targetDTO}">
+                    <span>
+                        <a href="#" th:text="${notification.notifier.name}"></a>
+                    </span>
+                    <span th:text="${notification.type}"></span>
+                    <span>
+                        <a th:href="@{'/notification/'+${notification.id}}" th:text="${notification.outerTittle}"></a>
+                    </span>
+                    <span th:if="${notification.status == 0}" class="glyphicon glyphicon-exclamation-sign notification"></span>
+                    <br class="hr-margin">
+                    <span class="index-question-text"
+                          th:text="${#dates.format(notification.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+
+                </div>
+                <!--            分页栏-->
+                <nav aria-label="Page navigation" class="page-navi">
+                    <ul class="pagination">
+                        <li th:if="${pagination.showFirstPage}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=1)}" aria-label="Previous">
+                                <span aria-hidden="true">&lt&lt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${pagination.showPrevious}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}-1)}" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                            </a>
+                        </li>
+                        <li th:each="page: ${pagination.pages}" th:class="${page==pagination.currentPage}?'active':''">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${page})}" th:text="${page}"></a></li>
+                        <li th:if="${pagination.showNext}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.currentPage}+1)}" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                            </a>
+                        </li>
+                        <li th:if="${pagination.showLastPage}">
+                            <a th:href="@{'/profile/'+${section}+'/'(page=${pagination.totalPage})}" aria-label="Next">
+                                <span aria-hidden="true">&gt&gt;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
+<!--        右侧导航栏-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
                 <a href="/profile/questions" th:class="${section=='questions'}?'list-group-item active':'list-group-item'">我的问题</a>
                 <a href="/profile/replies" th:class="${section=='replies'}?'list-group-item active':'list-group-item'">
                     最新回复
-                    <span class="badge">14</span>
+                    <span class="badge notification-back" th:text="${notificationCount}"></span>
                 </a>
-                <a href="#" class="list-group-item">Morbi leo risus</a>
-                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                <a href="#" class="list-group-item">Vestibulum at eros</a>
             </div>
         </div>
     </div>
